--- a/insecure-bank-net.csproj
+++ b/insecure-bank-net.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.14" />
+    <PackageReference Include="Sustainsys.Saml2" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
